# PETAce-Duet

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
bench/: CMakeLists.txt  README.md  bench.cpp  duet_bench.cpp  duet_bench.h
cmake/: DuetCustomMacros.cmake  EnableCXX17.cmake  EnableDebugFlags.cmake  ExternalBenchmark.cmake  ExternalGMP.cmake  ExternalSEAL.cmake  ExternalTclap.cmake  PETAce-DuetConfig.cmake.in  PETAce-Network.cmake  PETAce-Solo.cmake  PETAce-Verse.cmake
example/: CMakeLists.txt  README.md  duet_example.cpp  duet_example.h  duet_example.py  example.cpp
python/: CMakeLists.txt  duet_py_vm.cpp  duet_py_vm.h  duet_py_warpper.cpp  setup.py
python/petace/duet/: exception.py  securenumpy.py
python/petace/tests/: run.py  test_duet_vm.py
src/duet/: CMakeLists.txt  duet.cpp  duet.h  duet_base.cpp  duet_he.cpp  duet_ml.cpp  duet_sql.cpp  duet_stats.cpp
src/duet/beaver/: CMakeLists.txt  arithmetic_triplet.cpp  arithmetic_triplet.h  boolean_triplet.cpp  boolean_triplet.h
src/duet/beaver_triple/: CMakeLists.txt  arithmetic_triple.h  arithmetic_triple_fhe.cpp  arithmetic_triple_fhe.h  arithmetic_triple_ot.cpp  arithmetic_triple_ot.h  boolean_triple.cpp  boolean_triple.h  triple_factory.h
src/duet/oblivious_transfer/: CMakeLists.txt  oblivious_transfer.cpp  oblivious_transfer.h
src/duet/ot_generator/: CMakeLists.txt  ot_generator.cpp  ot_generator.h
src/duet/paillier/: CMakeLists.txt  paillier.cpp  paillier.h
src/duet/paillier_engine/: CMakeLists.txt  paillier_engine.cpp  paillier_engine.h
src/duet/share_translation/: CMakeLists.txt  st_generator.cpp  st_generator.h
src/duet/st_generator/: CMakeLists.txt  st_generator.cpp  st_generator.h
src/duet/util/: CMakeLists.txt  common.h  config.h.in  consts.h  defines.h  io.cpp  io.h  matrix.cpp  matrix.h  permutation.cpp  permutation.h  prng.cpp  prng.h  secret_shared_shuffle.cpp  secret_shared_shuffle.h
src/duet/vm/: CMakeLists.txt  duet_vm.cpp  duet_vm.h  instruction.cpp  instruction.h  operator.cpp  operator.h  register.cpp  register.h  register_content.h
test/: CMakeLists.txt  duet_test.cpp  ot_test.cpp  print_utils.cpp  print_utils.h  shuffle_test.cpp  test_utils.cpp  test_utils.h  triple_test.cpp  util_test.cpp  vm_test.cpp
tools/: clang-format-all.sh
